--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">simple web builder</a></section><section class="carousel slide cid-qU3ZkFOoIB" data-interval="false" id="slider1-2">
+<section class="engine"><a href="https://mobirise.me/p">site templates free download</a></section><section class="carousel slide cid-qU3ZkFOoIB" data-interval="false" id="slider1-2">
 
     
 
@@ -345,7 +345,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Auspiciador<br>PRESENTADOR DEL EVENTO</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-2">
-                    $50,000</h3>
+                    $35,000</h3>
                 
             </div>
         </div>
@@ -609,7 +609,7 @@
                     Contacto
                 </h5>
                 <p class="mbr-text">
-                    Email: support@mobirise.com<br><br></p>
+                    Email: vmmaldo@gmail.com<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Horario del evento</h5>
