--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="carousel slide cid-qU3ZkFOoIB" data-interval="false" id="slider1-2">
+<section class="engine"><a href="https://mobirise.me/q">free responsive web templates</a></section><section class="carousel slide cid-qU3ZkFOoIB" data-interval="false" id="slider1-2">
 
     
 
